src/objects/Epic__c.object
<CustomObject>
    <fields>
        <fullName>Complexity__c</fullName>
        <globalPicklist>LMH</globalPicklist>
        <label>Complexity</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Custom_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if custom development is needed for the solution.</inlineHelpText>
        <label>Custom Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customization_Description__c</fullName>
        <label>Customization Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duplicate_of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this epic is a duplicate of another existing epic, change the status to &quot;Rejected - Duplicate&quot; and link to the duplicate master epic here.</inlineHelpText>
        <label>Duplicate of</label>
        <referenceTo>Epic__c</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Epic_Name__c</fullName>
        <label>Epic Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Epic__c</fullName>
        <inlineHelpText>Format: &quot;As a &lt;role&gt;, I want &lt;goal/desire&gt; so that &lt;benefit&gt;.&quot;</inlineHelpText>
        <label>Epic</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Product_App__c</fullName>
        <defaultValue>false</defaultValue>
        <label>External Product/App?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integration__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if the solution will require integration with an external system.</inlineHelpText>
        <label>Integration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NIST_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NIST Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Out_of_the_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of the Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requester_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Requested Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requester_Office__c</fullName>
        <label>Requester Office</label>
        <picklist>
            <picklistValues>
                <fullName>AMNPO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baldrige</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calibrations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CNST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCNR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OFRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OWM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Library</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Requester__c</fullName>
        <label>Requester</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Epics</relationshipLabel>
        <relationshipName>Epics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected - Duplicate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Epic</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Epic_Name__c</columns>
        <columns>Requester_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EN-{00000}</displayFormat>
        <label>Epic Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Epics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>